--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="herosection">   </div>
         <div class="header">
             <div class="CollegeLogo">
-                <h4>Brand logo fix</h4>
+                <h4>Colleges logo fix</h4>
             </div>
             <div class="CollegeSpecification">
                 <ul>
