section four adding

--- a/index.html
+++ b/index.html
@@ -138,11 +138,16 @@
                         <div class="col-lg-6">
                             <div class="visiting-content-img">
                                 <img src="images/sub-hero/bag.jpeg">
+                                <h1>INTERNATIONAL STUDENTS</h1>
+                                <p>Information related  advice and talks</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="visiting-content-img">
                                 <img src="images/sub-hero/bag.jpeg">
+                                <h1>FRESHMAN WEEK</h1>
+                                <p>we have range of quality education and training<br>
+                                with brand.</p>
                             </div>
                         </div>
                     </div>
@@ -169,6 +174,42 @@
            </div>
        </div>
    </div>
+   <div class="sectionfour">
+   <div class="sectionfour-content">
+    <div class="row">
+       <div class="col-lg-6">
+            <h1>CAMPUS</h1>
+            <h2><b>LIFE</b></h2>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="campus-content-img">
+                        <img src="images/sub-hero/bag.jpeg">
+                        <h1>INTERNATIONAL STUDENTS</h1>
+                        <p>Information related  advice and talks</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="campus-content-img">
+                        <img src="images/sub-hero/bag.jpeg">
+                        <h1>FRESHMAN WEEK</h1>
+                        <p>we have range of quality education and training<br>
+                        with brand.</p>
+                    </div>
+                </div>
+            </div>
+       </div>
+       <div class="col-lg-6">
+            <div class="sectionfour-content-two">
+                <img src="images/sectionfour/sectionfour-three.jpeg">
+                <div>
+                    <h3>2018</h3>
+                    <p>TEDX AUBG</p>
+                </div>
+            </div>
+       </div>
+    </div>   
+   </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
