--- a/index.html
+++ b/index.html
@@ -227,6 +227,32 @@
             </div>
         </div>
     </div>
+    <div class="sectionsix">
+        <div class="sectionsix-content">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="sectionsix-content-one">
+                        <h1>
+                            WE<br>
+                            ARE
+                        </h1>
+                        <b>SOCIAL</b>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="sectionsix-content-two">
+                        <p>paragraph</p>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="sectionsix-content-three">
+                        <a href="#">BECOME A FAN</a>
+                        <a href="#">FOLLOW US ON TWITTER</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
