--- a/index.html
+++ b/index.html
@@ -253,6 +253,38 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="footer-content">
+            <div class="row">
+                <div class="col-lg-2">
+                    <div class="footer-content-one">
+                        <h5>Get placed</h5>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                        <div class="footer-content-two">
+                            <h5>Insights</h5>
+                        </div>
+                </div>
+                <div class="col-lg-2">
+                            <div class="footer-content-three">
+                                <h5>Downloads</h5>            
+                            </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="footer-content-four">
+                        <h5>campuses</h5>                    
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="footer-content-five">
+                        <b>SIGNUP FOR OUR NEWSLETTERS</b>
+                    </div>
+                </div>
+            </div>
+            <center><h6>copyrights@college_name 2018</h6></center>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
