--- a/index.html
+++ b/index.html
@@ -85,29 +85,23 @@
         <div class="col-lg-3">
                 <div class="sectiontwo-content">
             <h1>Latest Events</h1>
-            <p>
-                <span>
-                    <h2>01
+            <div>
+                <h2>01<br>
                     Sep</h2>
-                </span>
-                <span>
                     <h3>Grand Celebration with digital world...</h3>
-                </span>
-            </p>
+            </div>
             </div>
         </div>
         <div class="col-lg-3">
                 <div class="sectiontwo-content">
             <h1>Latest Events</h1>
-            <p>
-                <span>
-                    <h2>17
+                <div>
+                    <h2>17<br>
                     Sep</h2>
-                </span>
-                <span>
+                
                     <h3>Education Camp</h3>
-                </span>
-            </p>
+                </div>
+            
             </div>
         </div>
         <div class="col-lg-3">
