css styleing for section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </div>
                 </div>
            </div>
-           <div class="col-lg-4">
+           <div class="col-lg-4"id="gridcolorchange">
                <div class="sectionthree-content-two">
                     <h2>AUBG BY THE NUMBERS</h2>
                     <div class="number-list">
