desktop view done

--- a/index.html
+++ b/index.html
@@ -235,20 +235,20 @@
                     <div class="sectionsix-content-one">
                         <h1>
                             WE<br>
-                            ARE
-                        </h1>
-                        <b>SOCIAL</b>
+                            ARE<br>
+                       
+                        <b>SOCIAL</b> </h1>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="sectionsix-content-two">
-                        <p>paragraph</p>
+                        <p>Foreign faculty, flexible and dynamic curriculum, exciting research and global connections are the features that set SRM apart. Students have a wide choice of cutting edge programs including nanotechnology, bioinformatics, genetic engineering, remote sensing and GIS, embedded systems or computer forensics to choose from. Most of these courses are offered in close collaboration with foreign universities.</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="sectionsix-content-three">
-                        <a href="#">BECOME A FAN</a>
-                        <a href="#">FOLLOW US ON TWITTER</a>
+                        <a href="#"><img src="./images/social-icon/facebook.png"></a>
+                        <a href="#"><img src="./images/social-icon/twitter.png"></a>
                     </div>
                 </div>
             </div>
@@ -258,28 +258,61 @@
         <div class="footer-content">
             <div class="row">
                 <div class="col-lg-2">
-                    <div class="footer-content-one">
+                    <div class="footer-content one">
                         <h5>Get placed</h5>
+                        <ul>
+                            <li>Career Centre</li>
+                            <li>Corporate Advisory Board</li>
+                            <li>Corporate Relations</li>
+                            <li>Career Development Centre</li>
+                            <li>Placement</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col-lg-2">
-                        <div class="footer-content-two">
+                        <div class="footer-content two">
                             <h5>Insights</h5>
+                            <ul>
+                                <li>IQAC</li>
+                                <li>Students Club</li>
+                                <li>Virtual Tour</li>
+                                <li>Spectrum</li>
+                                <li>Researgence</li>
+                            </ul>
                         </div>
                 </div>
                 <div class="col-lg-2">
-                            <div class="footer-content-three">
-                                <h5>Downloads</h5>            
+                            <div class="footer-content three">
+                                <h5>Downloads</h5>  
+                                <ul>
+                                    <li>Management Info</li>
+                                    <li>Medicine & Health Sciences Info</li>
+                                    <li>Science & Humanities Info</li>
+                                    <li>Hotel Management Info</li>
+                                    <li>Syllabus and Model Questions</li>
+                                </ul>          
                             </div>
                 </div>
                 <div class="col-lg-2">
-                    <div class="footer-content-four">
-                        <h5>campuses</h5>                    
+                    <div class="footer-content four">
+                        <h5>campuses</h5>    
+                        <ul>
+                            <li>Chennai Area - Kattankulathur</li>
+                            <li>Chennai - Ramapuram</li>
+                            <li>Ramapuram Part - Vadapalani</li>
+                            <li>NCR - Ghaziabad</li>
+                        </ul>                
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="footer-content-five">
+                    <div class="footer-content five">
                         <b>SIGNUP FOR OUR NEWSLETTERS</b>
+                        <form>
+                            <div class="subscribeform">
+                                <input type="text" id="fname" name="fname">
+                                <a href="#">Submit</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
