--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         </div>
         <div class="heroContent">
             <h1>Live&nbsp;<b>Learn</b>&nbsp;Create</h1>
+            <div class="mobiledevice">
+                    <h1>Live<br>
+                    Learn</br>
+                Create</h1>
+            </div>
         <div class="subhero">
             <div class="row">
                 <div class="col-lg-8 col-md-12 col-sm-12 col-8">
@@ -64,10 +69,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                </div>
             </div>
         </div>
     </div>
+    
+    <div class="mobiledevice">
+            <div class="row">
+                <div class="col-12">
+                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img class="d-block w-100" src="images/sub-hero/book.jpg" alt="First slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/sub-hero/bag.jpeg" alt="Second slide">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img class="d-block w-100" src="images/sub-hero/lap.jpeg" alt="Third slide">
+                                  </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                </div>
+            </div>
+        </div>
 
    <div class="sectiontwo">
     <div class="row">
