--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     
     <div class="mobiledevice">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12" id="removepagging">
                         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                 <ol class="carousel-indicators">
                                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -110,7 +110,7 @@
 
    <div class="sectiontwo">
     <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12" id="removepagging">
                 <div class="sectiontwo-content">
                 <h1>social</h1>
                 <p>3 days ago</p>
@@ -121,7 +121,7 @@
                 </h5>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12" id="removepagging">
                 <div class="sectiontwo-content">
             <h1>Latest Events</h1>
             <div>
@@ -131,7 +131,7 @@
             </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12" id="removepagging">
                 <div class="sectiontwo-content">
             <h1>Latest Events</h1>
                 <div>
@@ -143,7 +143,7 @@
             
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12" id="removepagging">
             <div class="tourimage">
                 <h4>Virtual Tour</h4>
             </div>
@@ -210,19 +210,19 @@
    <div class="sectionfour">
    <div class="sectionfour-content">
     <div class="row">
-       <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+       <div class="col-lg-6 col-md-6 col-sm-12 col-12" id="removepagging">
            <div class="sectionfour-content-text">
             <h1>CAMPUS</h1>
             <h2><b>LIFE</b></h2>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6 widthfix">
                     <div class="campus-content-img">
                         <img src="images/sub-hero/bag.jpeg">
                         <h1>STUDENTS LIFE</h1>
                         <p>You can study, play, network and take part in a huge variety of activities. You can join an existing group, or even start your own on-campus endeavor.</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-6 widthfix">
                     <div class="campus-content-img">
                         <img src="images/sub-hero/bag.jpeg">
                         <h1>Organizations that fit you</h1>
@@ -232,7 +232,7 @@
             </div>
             </div>
        </div>
-       <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+       <div class="col-lg-6 col-md-6 col-sm-12 col-12" id="removepagging">
             <div class="sectionfour-content-two">
                 <img src="images/sectionfour/sectionfour-three.jpeg">
                 <div>
@@ -249,7 +249,7 @@
             <h1>STORY<br>
             OF<b>SUCCESS</b></h1>
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-12" id="removepagging">
                     <div class="sectionfive-content-one">
                         <p>
                                 My first semester of college was kind of a wake-up call for me. I remember doing poorly on my first couple of exams and the pressure I felt from my folks to get the kind of grades I got in high school. So, I doubled my efforts for the second round of tests and felt confident that all that extra time would improve my grades. Well, the midterms came and went, and so did my hopes for doing well in college. I was lost about what more I could do to improve my grades.
