--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4" id="removepagging">
                 </div>
             </div>
         </div>
